fix contrast ratio footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -866,7 +866,7 @@ a {
 }
 
 .footer a {
-    color: #777;
+    color: #aeaeae;
     transition: color 0.3s;
 }
 
